--- a/assets/less/app.less
+++ b/assets/less/app.less
@@ -2,8 +2,9 @@
 /* Import Bootstrap with disabled Glyphicons; Font Awesome is included by FontAwesomeAsset */
 @import "bootstrap";
 
+
 /* Custom Variables */
-//@brand-primary: #484748;
+@brand-primary: #8c232f;
 @border-radius-base: 1px;
 @border-radius-large: 3px;
 @border-radius-small: 0px;
