--- a/assets/less/app.less
+++ b/assets/less/app.less
@@ -4,7 +4,7 @@
 
 
 /* Custom Variables */
-@brand-primary: #8c232f;
+@brand-primary: #d28b26;
 @border-radius-base: 1px;
 @border-radius-large: 3px;
 @border-radius-small: 0px;
