--- a/assets/web/css/app.css
+++ b/assets/web/css/app.css
@@ -1078,12 +1078,12 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #8c232f;
+  color: #d28b26;
   text-decoration: none;
 }
 a:hover,
 a:focus {
-  color: #4f141a;
+  color: #91601a;
   text-decoration: underline;
 }
 a:focus {
@@ -1316,10 +1316,10 @@ mark,
   color: #777777;
 }
 .text-primary {
-  color: #8c232f;
+  color: #d28b26;
 }
 a.text-primary:hover {
-  color: #631921;
+  color: #a76e1e;
 }
 .text-success {
   color: #3c763d;
@@ -1347,10 +1347,10 @@ a.text-danger:hover {
 }
 .bg-primary {
   color: #fff;
-  background-color: #8c232f;
+  background-color: #d28b26;
 }
 a.bg-primary:hover {
-  background-color: #631921;
+  background-color: #a76e1e;
 }
 .bg-success {
   background-color: #dff0d8;
@@ -3051,8 +3051,8 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-primary {
   color: #ffffff;
-  background-color: #8c232f;
-  border-color: #781e28;
+  background-color: #d28b26;
+  border-color: #bc7d22;
 }
 .btn-primary:hover,
 .btn-primary:focus,
@@ -3061,8 +3061,8 @@ fieldset[disabled] .btn-default.active {
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
   color: #ffffff;
-  background-color: #631921;
-  border-color: #471218;
+  background-color: #a76e1e;
+  border-color: #895a19;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -3087,11 +3087,11 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #8c232f;
-  border-color: #781e28;
+  background-color: #d28b26;
+  border-color: #bc7d22;
 }
 .btn-primary .badge {
-  color: #8c232f;
+  color: #d28b26;
   background-color: #ffffff;
 }
 .btn-success {
@@ -3275,7 +3275,7 @@ fieldset[disabled] .btn-danger.active {
   background-color: #ffffff;
 }
 .btn-link {
-  color: #8c232f;
+  color: #d28b26;
   font-weight: normal;
   border-radius: 0;
 }
@@ -3296,7 +3296,7 @@ fieldset[disabled] .btn-link {
 }
 .btn-link:hover,
 .btn-link:focus {
-  color: #4f141a;
+  color: #91601a;
   text-decoration: underline;
   background-color: transparent;
 }
@@ -3443,7 +3443,7 @@ tbody.collapse.in {
   color: #ffffff;
   text-decoration: none;
   outline: 0;
-  background-color: #8c232f;
+  background-color: #d28b26;
 }
 .dropdown-menu > .disabled > a,
 .dropdown-menu > .disabled > a:hover,
@@ -3869,7 +3869,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav .open > a:hover,
 .nav .open > a:focus {
   background-color: #eeeeee;
-  border-color: #8c232f;
+  border-color: #d28b26;
 }
 .nav .nav-divider {
   height: 1px;
@@ -3962,7 +3962,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #ffffff;
-  background-color: #8c232f;
+  background-color: #d28b26;
 }
 .nav-stacked > li {
   float: none;
@@ -4589,7 +4589,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   padding: 6px 12px;
   line-height: 1.42857143;
   text-decoration: none;
-  color: #8c232f;
+  color: #d28b26;
   background-color: #ffffff;
   border: 1px solid #dddddd;
   margin-left: -1px;
@@ -4609,7 +4609,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > li > span:hover,
 .pagination > li > a:focus,
 .pagination > li > span:focus {
-  color: #4f141a;
+  color: #91601a;
   background-color: #eeeeee;
   border-color: #dddddd;
 }
@@ -4621,8 +4621,8 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > .active > span:focus {
   z-index: 2;
   color: #ffffff;
-  background-color: #8c232f;
-  border-color: #8c232f;
+  background-color: #d28b26;
+  border-color: #d28b26;
   cursor: default;
 }
 .pagination > .disabled > span,
@@ -4737,11 +4737,11 @@ a.label:focus {
   background-color: #5e5e5e;
 }
 .label-primary {
-  background-color: #8c232f;
+  background-color: #d28b26;
 }
 .label-primary[href]:hover,
 .label-primary[href]:focus {
-  background-color: #631921;
+  background-color: #a76e1e;
 }
 .label-success {
   background-color: #5cb85c;
@@ -4804,7 +4804,7 @@ a.badge:focus {
 }
 .list-group-item.active > .badge,
 .nav-pills > .active > a > .badge {
-  color: #8c232f;
+  color: #d28b26;
   background-color: #ffffff;
 }
 .list-group-item > .badge {
@@ -4875,7 +4875,7 @@ a.badge:focus {
 a.thumbnail:hover,
 a.thumbnail:focus,
 a.thumbnail.active {
-  border-color: #8c232f;
+  border-color: #d28b26;
 }
 .thumbnail .caption {
   padding: 9px;
@@ -4989,7 +4989,7 @@ a.thumbnail.active {
   line-height: 20px;
   color: #ffffff;
   text-align: center;
-  background-color: #8c232f;
+  background-color: #d28b26;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   -webkit-transition: width 0.6s ease;
@@ -5141,8 +5141,8 @@ a.list-group-item:focus {
 .list-group-item.active:focus {
   z-index: 2;
   color: #ffffff;
-  background-color: #8c232f;
-  border-color: #8c232f;
+  background-color: #d28b26;
+  border-color: #d28b26;
 }
 .list-group-item.active .list-group-item-heading,
 .list-group-item.active:hover .list-group-item-heading,
@@ -5158,7 +5158,7 @@ a.list-group-item:focus {
 .list-group-item.active .list-group-item-text,
 .list-group-item.active:hover .list-group-item-text,
 .list-group-item.active:focus .list-group-item-text {
-  color: #e5969f;
+  color: #f6e6ce;
 }
 .list-group-item-success {
   color: #3c763d;
@@ -5506,22 +5506,22 @@ a.list-group-item-danger.active:focus {
   border-bottom-color: #dddddd;
 }
 .panel-primary {
-  border-color: #8c232f;
+  border-color: #d28b26;
 }
 .panel-primary > .panel-heading {
   color: #ffffff;
-  background-color: #8c232f;
-  border-color: #8c232f;
+  background-color: #d28b26;
+  border-color: #d28b26;
 }
 .panel-primary > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #8c232f;
+  border-top-color: #d28b26;
 }
 .panel-primary > .panel-heading .badge {
-  color: #8c232f;
+  color: #d28b26;
   background-color: #ffffff;
 }
 .panel-primary > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #8c232f;
+  border-bottom-color: #d28b26;
 }
 .panel-success {
   border-color: #d6e9c6;
@@ -6581,24 +6581,24 @@ pre code {
   color: #fff;
 }
 .navbar-bold {
-  background-color: #781e28;
+  background-color: #bc7d22;
 }
 .navbar-bold li a:hover,
 .navbar-bold li.active {
-  background-color: #c93244;
+  background-color: #e3ad62;
 }
 .navbar-bold.affix {
-  background-color: ligthen(#8c232f, 5%);
+  background-color: ligthen(#d28b26, 5%);
 }
 .header {
   height: 20%;
-  background: #8c232f no-repeat center center;
+  background: #d28b26 no-repeat center center;
   background-size: cover;
   text-align: center;
 }
 @media (max-width: 767px) {
   .header {
-    background: #8c232f no-repeat center center;
+    background: #d28b26 no-repeat center center;
   }
 }
 .header h1 {
@@ -6643,7 +6643,7 @@ pre code {
 }
 .header .btn-lg:hover {
   background-color: #ffffff;
-  color: #8c232f;
+  color: #d28b26;
 }
 .vert {
   vertical-align: middle;
